security-group.tf
resource "aws_security_group" "my-sg" {
  name        = var.sg_name
  description = "Grupo de segurança permitindo conexões HTTP e HTTPS"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
